<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/judul_film"
            android:maxLines="2"
            android:ellipsize="end"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_poster"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/kategori_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_action"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/title_movie"
            app:layout_constraintStart_toEndOf="@id/image_poster" />

        <TextView
            android:id="@+id/title_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_duration"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/kategori_film"
            app:layout_constraintStart_toEndOf="@id/image_poster" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_duration"
            android:textSize="14sp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/title_duration"
            app:layout_constraintStart_toEndOf="@+id/title_duration"
            app:layout_constraintTop_toTopOf="@+id/title_duration" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>