<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.halamandetail.DetailActivity">
    
    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_video"
        android:layout_width="0dp"
        android:layout_height="240dp"
        app:autoPlay="false"
        app:showFullScreenButton="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/youtube_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/judul_film"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/icon_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/review"
                android:layout_marginTop="14dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/movie_title"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/movie_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_rate"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/icon_rate"
                app:layout_constraintBottom_toBottomOf="@+id/icon_rate"
                app:layout_constraintTop_toTopOf="@+id/icon_rate" />

            <ImageView
                android:id="@+id/icon_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/clock"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/icon_rate"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/movie_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_duration"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/icon_duration"
                app:layout_constraintBottom_toBottomOf="@+id/icon_duration"
                app:layout_constraintTop_toTopOf="@+id/icon_duration" />

            <ImageView
                android:id="@+id/icon_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/play"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="14dp"
                app:layout_constraintTop_toBottomOf="@id/icon_duration"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/movie_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_genre"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/icon_genre"
                app:layout_constraintBottom_toBottomOf="@+id/icon_genre"
                app:layout_constraintTop_toTopOf="@+id/icon_genre" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/overview"
                android:layout_marginTop="18dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/icon_genre"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/example_description"
                android:textSize="14sp"
                android:fontFamily="serif"
                android:lineSpacingExtra="2dp"
                android:textColor="@color/color_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@id/overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/favorite_border"
        app:backgroundTint="@color/white"
        app:fabSize="mini"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>